# zoom-sync

./: Cargo.toml  LICENSE  README.md  flake.nix  ref.js
raw/: Cargo.toml  README.md
raw/src/: consts.rs  lib.rs  types.rs
src/: info.rs  main.rs  weather.rs
src/zoom65/: consts.rs  mod.rs
