[package]
name = "zoom-sync"
version = "0.0.1"
edition = "2021"

[dependencies]
# runtime and scaffalding
tokio = { version = "1.41", features = ["full"] }
thiserror = "2.0.3"
strum = { version = "0.26", features = ["derive"] }

# cross-platform hardware api
hidapi = "2.6.3"

# data fetching
chrono = "0.4.38"
ipinfo = "3.0.1"
open-meteo-api = "0.1.4"
nvml-wrapper = "0.10.0" # nvidia temp
